fix: build navigation and dynamic port

--- a/lib/view.html
+++ b/lib/view.html
@@ -70,7 +70,7 @@
 </div>
 <div class="main">
     <div class="page-container page-component">
-        {{each buildFiles}}
+        {{each result}}
             <div style="float: left; width: 50%;"><h2>{{$value.name}}</h2>
                 <ul>
                     {{each $value.files item}}
