fix: browser auto open and navigation url error

--- a/lib/view.html
+++ b/lib/view.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>webpack编译文件导航</title>
+    <title>Webpack 编译文件导航</title>
     <meta name="keywords" :content="keywords">
     <meta name="description" :content="description">
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
